--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
-body {
-  background-color: #371B58;
+body{
+
+  background-image:url("../sketch1644089935571.png");
+  background-size: cover;
 }
 hr{
-
   border-color: #B25068;
   border-style: dotted none none;
   border-width:5px;
-
-
   width:20%;
 }
 img{
   height:200px;
 }
+h1{
+  font-family: sans-serif;
+  color:#9DD6DF;
+}
+h3{
+  font-family:  sans-serif;
+  color:#9DD6DF;
+
+}
+
